start to prepare final version